--- a/levels/blocks/footer/footer.css
+++ b/levels/blocks/footer/footer.css
@@ -1,5 +1,5 @@
 .footer {
-    padding: 40px 0;
+    padding: 5em 0;
     color: #777;
 }
 
