--- a/levels/blocks/grid/grid.scss
+++ b/levels/blocks/grid/grid.scss
@@ -21,3 +21,7 @@
 .grid__modifier-cell {
     border-left: 1px solid $red;
 }
+
+.grid_spaced {
+    padding: 2.5em 0;
+}
